-创建ControllerManager管理所有的控制器

--- a/Server/游戏服务器端/游戏服务器端.csproj
+++ b/Server/游戏服务器端/游戏服务器端.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D653FEFE-CB35-4F16-BB65-89922895C2E1}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>游戏服务器端</RootNamespace>
+    <RootNamespace>GameServer</RootNamespace>
     <AssemblyName>游戏服务器端</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>C:\Program Files (x86)\MySQL\MySQL Installer for Windows\MySql.Data.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +51,13 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Controller\" />
+    <Folder Include="DAO\" />
+    <Folder Include="Model\" />
+    <Folder Include="Server\" />
+    <Folder Include="Tool\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
